<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.camilomartinez.punto4.MainActivity"
    android:orientation="vertical"
    android:layout_weight="1"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eLoggin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:hint="@string/loggin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <TextView
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ePasscom"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:hint="@string/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eCorreo" />
        <TextView
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2">

                <RadioButton
                    android:text="@string/male"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:text="@string/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_span="3"
                android:id="@+id/eFecha" />

            <Button
                android:text="@string/set"
                android:textSize="20sp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_column="9"
                android:onClick="showcalendar" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basketball"
            android:id="@+id/checkBox"
            android:layout_below="@+id/spinner"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/checkBox3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/football"
            android:id="@+id/checkBox2"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/checkBox4"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/button2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volleyball"
            android:id="@+id/checkBox3"
            android:layout_below="@+id/checkBox"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycling"
            android:id="@+id/checkBox4"
            android:layout_alignBottom="@+id/checkBox3"
            android:layout_alignStart="@+id/checkBox2"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/button2"
            android:layout_below="@+id/checkBox3"
            android:layout_centerHorizontal="true"
            android:onClick="ejecutar" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_below="@+id/button2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
